prevent progress flicker

--- a/donation-thermometer.css
+++ b/donation-thermometer.css
@@ -29,6 +29,7 @@
 }
 
 #progress {
+    width: 0;
     height: 1.5em;
     background: #FF5D50;
 }
